@@ -1,3 +1,8 @@
+2016-02-22  Chris Allegretta <chrisa@asty.org>
+	* Add ability to kill the trailing spaces when justifying
+	code.  New nanorc option kill_spaces_on_wrap, we'll see
+	whether this warrants a command line flahg or not.
+
 2016-02-22  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.c (free_openfilestruct): Elide this function.
 	* scr/global.c (thanks_for_all_the_fish, free_list_item): Condense.
